- Fix: BirthDate et DeathDate dans Signer ont maintenant le bon type DateType
- Evolution: ajout d'une métadonnée élémentaire DescriptionLevel restreinte à l'enum de la norme SEDA
- Evolution: ajout d'une métadonnée élémentaire BooleanType
- Evolution: ajout d'une métadonnée LogBook pour les Events dans Management

============================================================================
Evolutions/Corrections en 1.9.0

- Fix: suppression des DataObjects non utilisés dans des ArchiveUnit lors de la normalisation
- Evolution: amélioration du suivi des exceptions spécifiques par empilement des causes, et restitution récursive des causes dans les logs
- Evolution: nettoyage et systématisation des logs
- Fix: l'option g accepte des chemins relatifs en argument

============================================================================
Evolutions/Corrections en 1.8.0

- Fix: typage des métadonnées BirthDate et DeathDate en DateType
- Evolution: lors d'une vérification de conformité par rapport à un profil SEDA, en cas d'échec le contexte de l'erreur est précisé

============================================================================
Evolutions/Corrections en 1.7.0

- Evolution: ajout d'une fonction d'export en hiérarchie simplifiée et csv de métadonnées sur disque
- Evolution: ajout d'une fonction d'export en hiérarchie simplifiée et csv de métadonnées dans un zip
- Evolution: ajout d'une fonction d'export d'un fichier csv de métadonnées
- Fix: ajout de la prise en compte des métadonnées de gestion dans les exports et imports csv

============================================================================
Evolutions/Corrections en 1.6.0

- Fix: correction de la gestion des attributs de lang (xml:lang)

============================================================================
Evolutions/Corrections en 1.5.0

- Evolution: ajout de la capacité à filtrer l'export des métadonnées descriptives dans le DataObjectPackage (chaque Content des ArchiveUnit)