@@ -5,6 +5,7 @@ Evolutions/Corrections en 1.11.0
 - Evolution: ajout d'une métadonnée élémentaire DescriptionLevel restreinte à l'enum de la norme SEDA
 - Evolution: ajout d'une métadonnée élémentaire BooleanType
 - Evolution: ajout d'une métadonnée LogBook pour les Events dans Management
+- Evolution: ajout de la méthode toString à ArchiveUnit, qui restitue le contenu XML ou le pointeur Object à défaut (pour faciliter le debug)
 
 ============================================================================
 Evolutions/Corrections en 1.9.0
